--- a/Traqqer/Dashboard.storyboard
+++ b/Traqqer/Dashboard.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6750" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="bxy-tj-tCf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C2513" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="bxy-tj-tCf">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6735"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <scenes>
-        <!--DASHBOARD-->
+        <!--Dashboard-->
         <scene sceneID="QBd-n8-ppD">
             <objects>
                 <viewController storyboardIdentifier="Dashboard" id="qrb-L8-do7" customClass="DashboardViewController" customModule="Traqqer" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,8 +17,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="DASHBOARD" id="Oaj-BM-CvK">
-                        <barButtonItem key="backBarButtonItem" title="DASHBOARD" id="qRZ-UJ-x4N"/>
+                    <navigationItem key="navigationItem" title="Dashboard" id="Oaj-BM-CvK">
+                        <barButtonItem key="backBarButtonItem" title="Dashboard" id="qRZ-UJ-x4N"/>
                         <barButtonItem key="leftBarButtonItem" title="Edit" style="done" id="Z4r-yU-jA9">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="hNO-FF-Iwt">
                                 <rect key="frame" x="16" y="7" width="24" height="24"/>
