--- a/Traqqer/DetailsStatsCell.xib
+++ b/Traqqer/DetailsStatsCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6750" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6735"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -15,13 +15,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7CF-0v-Fsg">
-                        <rect key="frame" x="8" y="8" width="38" height="27"/>
+                        <rect key="frame" x="13" y="8" width="38" height="27"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Duration" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eZO-Ce-T2A">
-                        <rect key="frame" x="246" y="8" width="66" height="27"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duration" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eZO-Ce-T2A">
+                        <rect key="frame" x="242" y="8" width="65" height="27"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -32,12 +32,12 @@
                     <constraint firstItem="7CF-0v-Fsg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="7u1-wp-zkM"/>
                     <constraint firstItem="eZO-Ce-T2A" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="DbE-Ga-pD3"/>
                     <constraint firstItem="7CF-0v-Fsg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="Jln-ch-Evu"/>
-                    <constraint firstItem="7CF-0v-Fsg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="JrE-6g-sXF"/>
+                    <constraint firstItem="7CF-0v-Fsg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="JrE-6g-sXF"/>
                     <constraint firstItem="7CF-0v-Fsg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="WdF-R4-Paj"/>
                     <constraint firstAttribute="bottomMargin" secondItem="7CF-0v-Fsg" secondAttribute="bottom" id="Zea-Gv-9LG"/>
                     <constraint firstAttribute="bottomMargin" secondItem="eZO-Ce-T2A" secondAttribute="bottom" id="c27-pk-ehD"/>
                     <constraint firstItem="7CF-0v-Fsg" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="fzz-Yi-Ck8"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="eZO-Ce-T2A" secondAttribute="trailing" id="knR-Fe-i5D"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="eZO-Ce-T2A" secondAttribute="trailing" constant="5" id="knR-Fe-i5D"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
