--- a/Traqqer/DashboardGraphsCell.xib
+++ b/Traqqer/DashboardGraphsCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6750" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6735"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -13,7 +13,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A6x-Jh-7ic" customClass="JBLineChartView">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A6x-Jh-7ic" customClass="JBBarChartView">
                         <rect key="frame" x="8" y="8" width="304" height="200"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -95,9 +95,9 @@
                 </variation>
             </tableViewCellContentView>
             <connections>
+                <outlet property="barChart" destination="A6x-Jh-7ic" id="Vcc-QB-mkr"/>
                 <outlet property="expandButton" destination="vg4-bB-244" id="hED-fn-OUA"/>
                 <outlet property="infoLabel" destination="dRY-wg-4rt" id="EOP-yv-hbH"/>
-                <outlet property="lineChart" destination="A6x-Jh-7ic" id="AZO-aq-I9b"/>
             </connections>
             <point key="canvasLocation" x="211" y="176.5"/>
         </tableViewCell>
